--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ By: Sameer Komoravolu
 	<div class="container-fluid">
 	  <div class="row" style="height: 100vh; padding-top: 55px">
 		<div class="col-sm-3 contentPanel">
-			<img src="Images/My Project.png" class="rounded-circle" width="150px" height="150px" alt="Sameer" border="1px solid #999999">
+			<img src="Images/myImage.png" class="rounded-circle" width="150px" height="150px" alt="Sameer" border="1px solid #999999">
 			<br><br>
 			<h3>Sameer Komoravolu</h3>
 			<h5>CS '25 @ UIUC | Intern at Fermilab</h5>
