--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ By: Sameer Komoravolu
 				<img src="Images/github.png" alt="github" class="links"></a>
 			
 			<a href = "mailto:samkomoravolu@gmail.com?subject = Hiring Manager&body = Message">
-				<img src="Images/gmail.png" alt="gmail" class="links"></a>
+				<img src="Images/gmail.png" alt="gmail" class="links" style="width: 53px"></a>
 				
 			<br><br><br>
 			<p>Mobile: (+1) 630-823-1516</p>
