--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ By: Sameer Komoravolu
 		  </li>
 		  
 		  <li class="nav-item">
-			<a class="nav-link" href="projects.html">Projects</a>
+			<a class="nav-link" href="https://github.com/samkomoravolu/Projects">Projects</a>
 		  </li>
 		  
 		  <li class="nav-item">
