--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ By: Sameer Komoravolu
 		  </li>
 		  
 		  <li class="nav-item">
-			<a class="nav-link" href="sameer_komoravolu_resume_2022.pdf">Resume</a>
+			<a class="nav-link" href="sk_res_22.pdf">Resume</a>
 		  </li>
 		  
 		  <li class="nav-item">
