--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ By: Sameer Komoravolu
 	<title>Home Page</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="CSS Files/site.css" rel="stylesheet">
+	<link rel="icon" type="image/x-icon" href="Images/me.png">
 </head>
 <body>
 	<nav class="navbar navbar-expand-sm bg-primary navbar-dark fixed-top">
