--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ By: Sameer Komoravolu
 					Academically motivated college school student with 2 years of particle physics research and work experience as a web developer and software engineering intern. Passionate about new fields of applied physics and machine learning. One of my primary goals for my education and career is to conduct any research to benefit our current understanding of artificial intelligence in hopes of one day developing a sentient machine.
 				</p>
 				-->
-The notion of hard work is often ill-conceived. Many times, we fail to recognize that hard
+A notion of hard work is often ill-conceived. Many times, we fail to recognize that hard
 work is not solely determined by effort, but how we use that effort to achieve what matters. In
 order to accomplish something meaningful, we have to consider which goals are important. In
 my case, I started to develop my understanding of hard work from the beginning of my
