--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@ By: Sameer Komoravolu
 			<a class="nav-link" href="https://github.com/samkomoravolu/Projects">Projects</a>
 		  </li>
 		  
-		  <li class="nav-item">
-			<a class="nav-link" href="dont.html">Don't Click Me</a>
-		  </li>
-		  
 		</ul>
 	  </div>
 	</nav>
@@ -39,7 +35,7 @@ By: Sameer Komoravolu
 	<div class="container-fluid">
 	  <div class="row" style="height: 100vh; padding-top: 55px">
 		<div class="col-sm-3 contentPanel">
-			<img src="Images/me.png" class="rounded-circle" width="150px" height="150px" alt="Sameer" border="1px solid #999999">
+			<img src="Images/me.jpg" class="rounded-circle" width="150px" height="150px" alt="Sameer" border="1px solid #999999">
 			<br><br>
 			<h3>Sameer Komoravolu</h3>
 			<h5>CS '25 @ UIUC | Intern at Fermilab</h5>
