--- a/index.html
+++ b/index.html
@@ -63,54 +63,8 @@ By: Sameer Komoravolu
 					Academically motivated college school student with 2 years of particle physics research and work experience as a web developer and software engineering intern. Passionate about new fields of applied physics and machine learning. One of my primary goals for my education and career is to conduct any research to benefit our current understanding of artificial intelligence in hopes of one day developing a sentient machine.
 				</p>
 				-->
-The notion of hard work is often ill-conceived. Many times, we fail to recognize that hard
-work is not solely determined by effort, but how we use that effort to achieve what matters. In
-order to accomplish something meaningful, we have to consider which goals are important. In
-my case, I started to develop my understanding of hard work from the beginning of my
-fifth-grade essay writing course. As I walked into the classroom for the first time, the most
-memorable thing that I noticed was a large wall packed with shelves of seemingly random items.
-The teacher’s wall had many posters and pictures of things that made a statement about her
-identity, including a framed family portrait, a beaming student review, and the intimidating
-Wisconsin Badgers mascot. However, the item that caught my attention the most was a huge
-eraser sitting on her top shelf. On it were inscribed the words, “For BIG Mistakes”. Although I
-had never been particularly keen on using erasers because they signified redoing what was good
-enough, I started to ask myself what was good enough. “Use it wisely,” she said, after seeing me
-staring at it. Cherishing the gift of revision, I examined aspects of my life very carefully to
-remove the mistakes I found.
+Passionate and driven computer science enthusiast with a diverse background in interdisciplinary fields such as bioinformatics, quantum computing, and the Internet of Things (IoT). Eager to leverage my expertise in artificial intelligence, reinforced through rigorous coursework, research experiences at prestigious institutions like Fermilab, and practical industry exposure at Chamberlain Group, to contribute meaningfully to the advancement of cutting-edge technologies. Committed to continual learning and innovation, I aim to pursue a career where I can apply my technical skills and interdisciplinary knowledge to tackle complex challenges and drive positive change in society.
 </div>
-<div class="container texts">
-By the end of the year, the eraser was now a pile of eraser shavings soaked in what used
-to be writing. Throughout the month prior, our class had received and workshopped a major
-project involving an essay presented on a poster. After receiving a 95 on the first draft, I spent
-several hours late at night revising for those last few points. I had sacrificed my peace of mind
-and ability to relax for that last month just to marginally increase the quality of an old project and
-pass a mental boundary. But why did I do it? At the time, I believed that the core principle of
-hard work was to refuse to accept any standard short of perfection, as is human nature.
-However, I was forced to question this definition of hard work and whether it was worth the toil
-in later years. There were times when I found I had fewer hours in a day than it would take to
-complete every task flawlessly, and I soon realized that I would have to consider how much of
-what I accomplished mattered to me. The only way humanity has achieved anything meaningful
-is through the hard work and ingenuity of individuals. To answer the question, I considered the
-kind of impact I wanted to have on humankind. My vision for the future is one where humanity
-is more intelligent and efficient than currently possible with the help of sentient AI supplements.
-"Deep learning", a subset of machine learning, is rapidly improving in mimicking the human
-decision-making process, so investigating deep learning will further research in developing
-sentient AI. I believe that this is a goal worth fighting for, and it is the motivation for my hard
-work.
-</div>
-<div class="container texts">
-Throughout my time in high school, I strived to develop my understanding of computer
-science and machine learning to alter the state of technology in the future. To get practice in
-theoretical research, I worked as an intern at the Fermilab particle physics lab. My job was to
-generate graphs and displays of particle interaction data using C++ code and to present findings
-in the paper. This was my first experience conducting novel research, and I learned a lot about
-the subject. Although my work was not perfect, it made me realize that I did contribute to the
-field in some way. In the grand scheme of things, hard work is not defined by how close to perfect one’s work is
-but how by much one contributes to what matters to them.
-				
-			</div>
-		</div>
-	  </div>
-	</div>
+
 </body>
 </html>
