--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ By: Sameer Komoravolu
 	<title>Home Page</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="CSS Files/site.css" rel="stylesheet">
-	<link rel="icon" type="image/png" href="Images/gitphoto.png">
+	<link rel="icon" type="image/jpeg" href="Images/IMG_4308.jpg">
 </head>
 <body>
 	<nav class="navbar navbar-expand-sm bg-primary navbar-dark fixed-top">
@@ -17,7 +17,7 @@ By: Sameer Komoravolu
 		<ul class="navbar-nav">
 		
 		  <li class="nav-item" style="margin-left: 200px; padding-top: 3px">
-		    <a class="navbar-brand" href="">Sameer Komoravolu</a>
+		    <a class="navbar-brand" href="">Monkey Cheeks</a>
 		  </li>
 		  
 		  <li class="nav-item">
@@ -35,35 +35,35 @@ By: Sameer Komoravolu
 	<div class="container-fluid">
 	  <div class="row" style="height: 100vh; padding-top: 55px">
 		<div class="col-sm-3 contentPanel">
-			<img src="Images/gitphoto.png" class="rounded-circle" width="150px" height="150px" alt="Sameer" border="1px solid #999999">
+			<img src="Images/IMG_4308.jpg" class="rounded-circle" width="150px" height="150px" alt="Monkey Cheeks" border="1px solid #999999">
 			<br><br>
-			<h3>Sameer Komoravolu</h3>
-			<h5>CS '25 @ UIUC | Intern at Chamberlain Group</h5>
+			<h3>Monkey Cheeks</h3>
+			<h5>BS/MS CS @ UIUC | Incoming SDE Intern @ Amazon</h5>
 			<br>
 			
-			<a href="https://www.linkedin.com/in/sameer-komoravolu-80a7ba229/">
+			<a href="https://www.linkedin.com/in/">
 				<img src="Images/linkedin.png" alt="linkedin" class="links"></a>
 			
-			<a href="https://github.com/samkomoravolu">
+			<a href="https://github.com/">
 				<img src="Images/github.png" alt="github" class="links"></a>
 			
-			<a href = "mailto:samkomoravolu@gmail.com?subject = Hiring Manager&body = Message">
+			<a href = "mailto:mcheeks@illinois.edu?subject = Hiring Manager&body = Message">
 				<img src="Images/gmi.png" alt="gmail" class="links" style="width: 53px"></a>
 				
 			<br><br><br>
-			<p>Mobile: (+1) 630-823-1516</p>
-			Email:<a href = "mailto:samkomoravolu@gmail.com?subject = Hiring Manager&body = Message" class="links">samkomoravolu@gmail.com</a>
+			<p>Champaign, IL</p>
+			Email:<a href = "mailto:mcheeks@illinois.edu?subject = Hiring Manager&body = Message" class="links">mcheeks@illinois.edu</a>
 			
 		</div>
 		<div class="col-sm-9" style="padding-top: 50px">
 			<div class="container texts">
-				<h2>My Objective</h2>
+				<h2>About</h2>
 				<!--
 				<p>
 					Academically motivated college school student with 2 years of particle physics research and work experience as a web developer and software engineering intern. Passionate about new fields of applied physics and machine learning. One of my primary goals for my education and career is to conduct any research to benefit our current understanding of artificial intelligence in hopes of one day developing a sentient machine.
 				</p>
 				-->
-Passionate and driven computer science enthusiast with a diverse background in interdisciplinary fields such as bioinformatics, quantum computing, and the Internet of Things (IoT). Eager to leverage my expertise in artificial intelligence, reinforced through rigorous coursework, research experiences at prestigious institutions like Fermilab, and practical industry exposure at Chamberlain Group, to contribute meaningfully to the advancement of cutting-edge technologies. Committed to continual learning and innovation, I aim to pursue a career where I can apply my technical skills and interdisciplinary knowledge to tackle complex challenges and drive positive change in society.
+Computer science student at UIUC (BS/MS) focusing on AI/ML and systems. Experience includes incoming Software Development Engineering internship at Amazon, prior Machine Learning Research internship at Grammarly, and software engineering internships at Chamberlain Group. Former student researcher at Fermilab working on DNN-based analysis for particle physics. Projects span a from-scratch AlphaZero framework in C++ and a self-driving Raspberry Pi platform. Passionate about building reliable, scalable software and applied machine learning.
 </div>
 
 </body>
